Fixed overlapping div

--- a/src/components/modules/card.module.css
+++ b/src/components/modules/card.module.css
@@ -63,7 +63,6 @@
 
 .image-container {
 	width: 100%;
-	height: 100%;
 }
 
 .image-container .link {
